pipex finished structurally

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ testingfunc/mallocfail.c
 testingfunc/dup2
 testingfunc/dup2.c
 testingfunc/testing.txt
+testingfunc/strerror
+testingfunc/strerror.c
